@@ -55,6 +55,13 @@
     <binary>devhelp</binary>
   </provides>
   <releases>
+    <release version="41.0" date="2021-09-17">
+      <description>
+        <p>Update the UI to follow the GNOME interface guidelines more closely.</p>
+        <p>Support the documentation generated by GTK 4, Pango, and other libraries.</p>
+        <p>Many localization updates.</p>
+      </description>
+    </release>
     <release type="development" version="41-beta" date="2021-08-14" />
     <release type="development" version="41-alpha" date="2021-07-09" />
     <release version="40.0" date="2021-04-12" />
