@@ -1,3 +1,7 @@
+News in 41.0, 2021-09-17
+------------------------
+* Translation updates
+
 News in 41.rc, 2021-09-04
 -------------------------
 * Translation updates
